# VoiceKit

./: README.md  index.html  package-lock.json  package.json  simulation_test.txt  vite.config.ts  开发文档.md
.github/workflows/: release.yml
src/: App.vue  settings.html  settings.ts
src-tauri/: Cargo.toml  config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/asr/: audio.rs  doubao.rs  error.rs  factory.rs  manager.rs  mod.rs  provider.rs  xunfei.rs
src-tauri/src/asr/doubao/: mod.rs  protocol.rs  streaming.rs
src-tauri/src/asr/providers/: doubao.rs  funasr.rs  mod.rs  xunfei.rs
src-tauri/src/commands/: asr_test.rs  mod.rs  recording.rs  settings.rs  theme.rs  window.rs
src-tauri/src/models/: buffer.rs  config.rs  mod.rs  state.rs
src-tauri/src/store/: config.rs  state.rs
src-tauri/src/utils/: mod.rs  recording.rs  recording_state.rs  shortcut.rs  text_diff.rs  window_ext.rs
src-tauri/src/workflow/: asr_controller.rs  global_input.rs  input_simulator.rs  mod.rs  recorder.rs
src/api/: config.ts
src/components/: PasswordInput.vue  Settings.vue
src/components/settings/asr/: AsrSettings.vue  DoubaoConfig.vue  XunfeiConfig.vue
src/composables/: useConfig.ts
src/pages/: Settings.vue
src/pages/settings/: Settings.vue
src/pages/settings/asr/: AsrSettings.vue  DoubaoConfig.vue  (+2 more)
src/settings/: main.ts
src/themes/: index.ts
src/themes/apple/: index.vue
src/themes/default/: index.vue
src/themes/google/: index.vue
